--- a/authopenid/templates/openidlogin.html
+++ b/authopenid/templates/openidlogin.html
@@ -16,10 +16,9 @@
     <div id="verify-form">
       <form method="get" accept-charset="UTF-8" action="${action}">
         Identifier:
-        <input type="text" name="openid_identifier" value="" />
+        <input type="text" name="openid_identifier" class="openid-identifier" value="" />
         <input type="submit" value="Verify" /><br />
         <input type="checkbox" name="immediate" id="immediate" /><label for="immediate">Use immediate mode</label>
-        <input type="checkbox" name="use_sreg" id="use_sreg" /><label for="use_sreg">Request registration data</label>
       </form>
     </div>
   </body>
