Fix from Martin Paljak.

--- a/authopenid/templates/openidlogin.html
+++ b/authopenid/templates/openidlogin.html
@@ -15,7 +15,7 @@
     <div py:attrs="{'class': css_class}" py:content="message"/>
     <div id="verify-form">
       <form method="post" accept-charset="UTF-8" action="${action}">
-        Identifier:
+        OpenID URL:
         <input type="text" name="openid_identifier" class="openid-identifier" value="" />
         <input type="submit" value="Verify" /><br />
       </form>
