* What is OpenID link * redirect to specified location

--- a/authopenid/templates/openidlogin.html
+++ b/authopenid/templates/openidlogin.html
@@ -22,9 +22,10 @@
       <form name="login" method="post" accept-charset="UTF-8" action="${action}">
         OpenID URL:
         <input type="text" name="openid_identifier" class="openid-identifier" value="" />
-        <input type="submit" value="Verify" /><br />
+        <input type="submit" value="Verify" />
       </form>
     </div>
+    <a py:attrs="{'href': whatis}">What is OpenId?</a>
   </body>
 
 </html>
