Ticket #3735 patch from michela.
http://trac-hacks.org/ticket/3735

--- a/authopenid/templates/openidlogin.html
+++ b/authopenid/templates/openidlogin.html
@@ -26,6 +26,7 @@
       </form>
     </div>
     <a py:attrs="{'href': whatis}">What is OpenId?</a>
+    <a py:attrs="{'href': signup}">Sign-up</a>
   </body>
 
 </html>
