add functional test for interactive login

--- a/authopenid/templates/openid_register.html
+++ b/authopenid/templates/openid_register.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <form name="register" action="${register_url}" method="post"
+    <form id="register" action="${register_url}" method="post"
           accept-charset="UTF-8">
       <p py:if="name">Welcome, ${name}!</p>
       <p>
