Hacked up latest openid-select so that it works for us again.
Supports custom provider, and configurable list of providers.

--- a/authopenid/htdocs/openid-selector/css/openid-shadow.css
+++ b/authopenid/htdocs/openid-selector/css/openid-shadow.css
@@ -4,11 +4,11 @@
 	
 	This code is licensed under the New BSD License.
 */
-
+/*
 #openid_form {
 	width: 590px;
 }
-
+*/
 #openid_form legend {
 	font-weight: bold;
 }
