--- a/authopenid/htdocs/openid-selector/css/openid.css
+++ b/authopenid/htdocs/openid-selector/css/openid.css
@@ -5,9 +5,11 @@
 	This code is licensed under the New BSD License.
 */
 
+/*
 #openid_form {
 	width: 580px;
 }
+*/
 
 #openid_form legend {
 	font-weight: bold;
