Put the fancy openid selector on the prefs panel too

--- a/authopenid/templates/openid-selector.html
+++ b/authopenid/templates/openid-selector.html
@@ -18,7 +18,7 @@
 
   <body>
     <!-- FIXME: rename form id -->
-    <form id="openid_form" method="post" accept-charset="UTF-8" action="">
+    <form method="post" accept-charset="UTF-8" action="">
       <div id="openid_choice">
         <p>Please click your account provider:</p>
         <div id="openid_btns"></div>
