--- a/authopenid/templates/openid_preferences.html
+++ b/authopenid/templates/openid_preferences.html
@@ -7,6 +7,8 @@
 
   <xi:include href="prefs.html" />
 
+  <xi:include py:if="selector.template" href="${selector.template}" />
+
   <head>
     <title>OpenID</title>
   </head>
@@ -41,18 +43,19 @@
     </div>
 
     <h2>Add an OpenID</h2>
-    <form method="post" accept-charset="UTF-8" action="">
+    <form method="post" action="${href.prefs('openid')}"
+          class="openid-authn-form" accept-charset="UTF-8">
       <fieldset>
         <legend>Claim an OpenID</legend>
+        <input type="hidden" name="action" value="associate"/>
         <div py:if="len(openid_identifiers)" class="important">
           <strong>Note</strong>: At present, each trac user can be
           associated with at most one OpenID &mdash; claiming another
           OpenID will remove any previously associated OpenIDs.  (Support
           for multiple OpenIDs per user will be added at some point.)
         </div>
-        <p class="openid-authn-controls">
+        <p class="controls">
           <input type="text" name="openid_identifier" value="" size="50"/>
-          <input type="hidden" name="action" value="associate"/>
           <input type="submit" value="Claim"/>
         </p>
       </fieldset>
